fix: catalog entity domain select z-index

--- a/src/discrete-layer/views/discrete-layer-view.css
+++ b/src/discrete-layer/views/discrete-layer-view.css
@@ -200,7 +200,7 @@ body[dir='rtl'] .sideDetailsPanel {
 .tabHeaderContainer .filterByCatalogEntitySelect {
   width: 130px;
   padding: 0 6px 0 6px;
-  z-index: 2002;
+  z-index: 5;
   align-self: center;
 }
 
